updated all deps and using yarn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,25 @@
     "**/dist": true,
     "**/node_modules": true
   },
-  "typescript.preferences.importModuleSpecifier": "relative"
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#70a3cc",
+    "activityBar.background": "#70a3cc",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#a43b75",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#70a3cc",
+    "statusBar.background": "#4b8bbe",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#70a3cc",
+    "statusBarItem.remoteBackground": "#4b8bbe",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#4b8bbe",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#4b8bbe99",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "#4B8BBE"
 }
