--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "react-express-ts",
   "scripts": {
-    "postinstall": "npm --prefix ./client install && npm --prefix ./server install",
-    "dev:client": "npm --prefix ./client run dev",
-    "dev:server": "npm --prefix ./server run dev",
-    "build": "npm --prefix ./client run build && npm --prefix ./server run build",
+    "postinstall": "yarn --cwd ./client install && yarn --cwd ./server install",
+    "dev:client": "yarn --cwd ./client run dev",
+    "dev:server": "yarn --cwd ./server run dev",
+    "build": "yarn --cwd ./client run build && yarn --cwd ./server run build",
     "lint:fix": "eslint ./ --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
-    "lint": "npm run lint:format && npm run lint:fix"
+    "lint": "yarn lint:format && yarn lint:fix"
   },
   "dependencies": {
-    "@types/node": "^14.17.18",
-    "typescript": "^4.4.3"
+    "@types/node": "^20.10.7",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
-    "prettier": "^2.4.1"
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "prettier": "^3.1.1"
   },
   "eslintConfig": {
     "root": true,
